<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Call Location</string>
    
    <string name="pref_category_map_title">Map Settings</string>
    <string name="pref_maps_zoom_pref_title">Zoom Level</string>
    <string name="pref_maps_zoom_pref_summary">Level of zoom on the Map View</string>
       
    <string name="pref_category_locservice_title">Location Service Settings</string>
    <string name="pref_locservice_interval_pref_title">GPS Time Interval</string>
    <string name="pref_locservice_interval_pref_summary">Time between GPS updates</string>
    <string name="pref_locservice_distance_pref_title">Minimum Distance</string>
    <string name="pref_locservice_distance_pref_summary">Distance between GPS updates</string>
    
    <string name="button_text_start">Start</string>
    <string name="button_text_stop">Stop</string>
    
    <string name="menuoption_callhistory">View Call History</string>
    <string name="menuoption_newsfeed">News Feed</string>
    <string name="menuoption_preferences">Preferences</string>
	<string name="menuoption_about">About</string>
	
	<string name="callhistoryactivity_title">Call History</string>
	<string name="callmapactivity_title">View Call Location</string>
	<string name="newsfeedactivity_title">Latest Updates</string>
	<string name="settingsactivity_title">Settings</string>
	
	<string name="newsfeedactivity_wait">Downloading Feed…</string>
	
	<string name="service_title">Call Location Service</string>
	<string name="service_subtext">service active</string>
	
	<string name="about_title">About Call Location</string>
	<string name="about_text">Call location takes note of your geo-location when a call is received.</string>
	
	<string name="callhistory_empty">There are no results to display</string>
	<string name="callhistory_time">Time:</string>
	<string name="callhistory_number">From:</string>
	<string name="callhistory_contextmenu_returncall">Return Call</string>
	<string name="callhistory_contextmenu_delete">Delete Entry</string>
	<string name="callhistory_contextmenu_confirm_deletion">Are you sure?</string>

    <string name="channel_name">Channel Name</string>
	<string name="channel_description">Channel Description</string>

</resources>